2004-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/page-layout.scm (ly:optimal-page-breaks): don't compute
	force twice.

	* lily/simple-spacer.cc (LY_DEFINE): if line too long in ragged
	mode, return #f.	

	* scm/page-layout.scm (ly:optimal-page-breaks): set force = 0.0
	for last page if raggedlast. 

	* lily/parser.yy (Prefix_composite_music): untransposable is for
	FiguredBass, not ChordNames

2004-10-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-tex.scm: Merge fix.

2004-10-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	The grand \paper -> \layout, \bookpaper -> \paper renaming.

2004-10-10  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: add raggedright to a whole
	bunch of places.

2004-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/paper.scm (set-paper-dimension-variables): new
	function. Define dimension-variables explicitly in \paper too.
	This allows overriding linewidth inside \score { \paper { } }
	blocks
 
	* scm/framework-tex.scm (convert-to-ps): invoke dvips with -t
	landscape.
	(header): add landscape and papersize options.

2004-10-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/*.cc: use robust_scm2moment() where appropriate.

	* lily/moment.cc (robust_scm2moment): new function.

	* scm/titling.scm (default-score-title): remove caps for piece.

	* lily/include/slur-scoring.hh (struct Slur_score_state): new file

	* lily/include/slur-configuration.hh (class Slur_configuration):
	new file.

	* lily/slur-configuration.cc: new file. move scoring functions
	into Slur_configuration.

	* lily/slur-scoring.cc (Slur_score_state): change static functions
	to methods of Slur_score_state.

	* lily/bezier-bow.cc (Message): 

	* flower/include/interval-set.hh (Message): new file.

	* flower/interval-set.cc (Message): new file.

2004-10-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/multi-measure-rest-engraver.cc (process_music): always
	generate MultiMeasureRestNumbers.
