@@ -1,5 +1,10 @@
 2004-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/slur-scoring.cc (move_away_from_staffline): new function.
+	(get_base_attachments): move away attachment point for breaks
+	similar to attachment points on slurs (staffline collision, and
+	half a space of padding)
+
 	* scm/page-layout.scm (ly:optimal-page-breaks): don't compute
 	force twice.
 
